force-app/main/default/objects/Program/fields/Portal_Display_Order__c.field-meta.xml
<CustomField>
    <fullName>Portal_Display_Order__c</fullName>
    <label>Portal Display Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>