force-app/main/default/objects/Program/fields/Portal_Hook__c.field-meta.xml
<CustomField>
    <fullName>Portal_Hook__c</fullName>
    <description>The page in which this program should show up.
Ex. (www.example.com/s/custom-page) (Hook = custom-page)</description>
    <inlineHelpText>The page in which this program should show up.
Ex. (www.example.com/s/custom-page) (Hook = custom-page)</inlineHelpText>
    <label>Portal Hook</label>
    <length>255</length>
    <type>Text</type>
</CustomField>