force-app/main/default/objects/Program/fields/Portal_isActive__c.field-meta.xml
<CustomField>
    <fullName>Portal_isActive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines if the program should be displayed on the portal.</description>
    <inlineHelpText>Determines if the program should be displayed on the portal.</inlineHelpText>
    <label>Portal isActive</label>
    <type>Checkbox</type>
</CustomField>