force-app/main/default/objects/Program/fields/Program_Description__c.field-meta.xml
<CustomField>
    <fullName>Program_Description__c</fullName>
    <label>Program Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>